# CoSE_Pulse

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml
config/: settings.py
cose_pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cose_pulse/database/: database.py  models.py  repository.py  schema.py  sqlite.py  test_repository.py
cose_pulse/discovery/: crawl_engine.py  crawl_scheduler.py  crawl_statistics.py  crawl_worker.py  crawler.py  exporter.py  fetcher.py  filters.py  link_extractor.py  metadata.py  opportunity_extractor.py  page_processor.py  pipeline.py  prioritizer.py
cose_pulse/services/: discovery_service.py  test_service.py
data/: cose_pulse.db
output/: sfsu_cose_contacts_clean.csv  sfsu_cose_contacts_phase1.csv  sfsu_cose_contacts_phase1_clean.csv  sfsu_cose_contacts_raw.csv  sfsu_cose_contacts_review.csv  sfsu_cose_contacts_v03.csv  sfsu_cose_contacts_v04.csv  sfsu_cose_contacts_v05.csv
scripts/: run_discover.py  sfsu_cose_contacts_scraper.py
scripts/database/: database.py  inspect_db.py  models.py  repository.py  schema.py  sqlite.py  test_queries.py  test_repository.py
scripts/discovery/: change_detector.py  classifier.py  content_extractor.py  crawl_engine.py  crawl_scheduler.py  crawl_statistics.py  crawl_worker.py  crawler.py  discovery_config.py  exporter.py  fetcher.py  filters.py  link_extractor.py  metadata.py  opportunity_extractor.py  page_processor.py  pipeline.py  prioritizer.py  row_builder.py  url_queue.py
scripts/parsers/: common.py  (+5 more)
(+2 files in other folders)
