[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cose-pulse"
version = "0.1.0"
description = "CoSE Pulse Discovery Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Oscar Madong" }
]

dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.scripts]
cose-pulse = "cose_pulse.discovery.crawler:main"

[tool.setuptools]
packages = ["cose_pulse"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff.lint]
ignore = ["E402"]